--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.5"
@@ -24,5 +25,6 @@
   ],
   "devDependencies": {
     "prettier": "1.16.4"
-  }
+  },
+  "proxy": "http://localhost:4000"
 }
