--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.18.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-helmet": "^5.2.0",
     "react-scripts": "2.1.5",
     "recharts": "^1.5.0",
     "styled-components": "^4.1.3"
